re run the translation

--- a/admin/src/i18n/en.json
+++ b/admin/src/i18n/en.json
@@ -1,5 +1,3 @@
 {
-    "matrix-org adapter settings": "Adapter settings for matrix-org",
-    "option1": "option1",
-    "option2": "option2"
+    "matrix-org adapter settings": "Adapter settings for matrix-org"
 }
