--- a/admin/src/i18n/nl.json
+++ b/admin/src/i18n/nl.json
@@ -1,5 +1,3 @@
 {
-    "matrix-org adapter settings": "Adapterinstellingen voor matrix-org",
-    "option1": "Optie 1",
-    "option2": "Optie 2"
+    "matrix-org adapter settings": "Adapterinstellingen voor matrix-org"
 }
