--- a/admin/src/i18n/ru.json
+++ b/admin/src/i18n/ru.json
@@ -1,5 +1,3 @@
 {
-    "matrix-org adapter settings": "Настройки адаптера для matrix-org",
-    "option1": "Опция 1",
-    "option2": "вариант 2"
+    "matrix-org adapter settings": "Настройки адаптера для matrix-org"
 }
