--- a/admin/src/i18n/de.json
+++ b/admin/src/i18n/de.json
@@ -1,5 +1,3 @@
 {
-    "matrix-org adapter settings": "Adaptereinstellungen für matrix-org",
-    "option1": "Option 1",
-    "option2": "Option 2"
+    "matrix-org adapter settings": "Adaptereinstellungen für matrix-org"
 }
