--- a/admin/src/i18n/es.json
+++ b/admin/src/i18n/es.json
@@ -1,5 +1,3 @@
 {
-    "matrix-org adapter settings": "Ajustes del adaptador para matrix-org",
-    "option1": "Opción 1",
-    "option2": "opcion 2"
+    "matrix-org adapter settings": "Ajustes del adaptador para matrix-org"
 }
