--- a/admin/src/i18n/it.json
+++ b/admin/src/i18n/it.json
@@ -1,5 +1,3 @@
 {
-    "matrix-org adapter settings": "Impostazioni dell'adattatore per matrix-org",
-    "option1": "opzione 1",
-    "option2": "opzione 2"
+    "matrix-org adapter settings": "Impostazioni dell'adattatore per matrix-org"
 }
