--- a/admin/src/i18n/pl.json
+++ b/admin/src/i18n/pl.json
@@ -1,5 +1,3 @@
 {
-    "matrix-org adapter settings": "Ustawienia adaptera dla matrix-org",
-    "option1": "opcja 1",
-    "option2": "Opcja 2"
+    "matrix-org adapter settings": "Ustawienia adaptera dla matrix-org"
 }
