--- a/admin/src/i18n/pt.json
+++ b/admin/src/i18n/pt.json
@@ -1,5 +1,3 @@
 {
-    "matrix-org adapter settings": "Configurações do adaptador para matrix-org",
-    "option1": "Opção 1",
-    "option2": "opção 2"
+    "matrix-org adapter settings": "Configurações do adaptador para matrix-org"
 }
