--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,3 +1,12 @@
 {
-    "matrix-org adapter settings": "Configurações do adaptador para matrix-org"
+    "matrix-org adapter settings": "Configurações do adaptador para matrix-org",
+    "name": "nome",
+    "botName": "nome do bot",
+    "botNameDescription": "nome de usuário para este serviço na matrix",
+    "botPassword": "senha do bot",
+    "helpBotPassword": "uma senha mais ou menos complexa para o usuário do bot na matrix",
+    "room": "Sala",
+    "helpRoom": "nome da sala em seu servidor matrix",
+    "server": "Servidor",
+    "helpServer": "IP ou hostname do seu servidor matrix"
 }
