functional adaption of auto join * add checkbox for enabling auto join * default like before without auto join * axios removed [no-ticket]

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -8,5 +8,7 @@
     "room": "Raumname",
     "helpRoom": "Raumname in Ihrem Matrixserver",
     "server": "Server",
-    "helpServer": "IP oder Hostname Ihres Matrixservers"
+    "helpServer": "IP oder Hostname Ihres Matrixservers",
+    "autoJoin": "Dem eingeladenen Kanal automatisch beitreten",
+    "helpAutoJoin": "Dem eingeladenen Kanal automatisch beitreten, wenn aktiviert"
 }
