--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -8,5 +8,7 @@
     "room": "Комната",
     "helpRoom": "имя комнаты на вашем матричном сервере",
     "server": "Сервер",
-    "helpServer": "IP или имя хоста вашего матричного сервера"
+    "helpServer": "IP или имя хоста вашего матричного сервера",
+    "autoJoin": "присоединиться к приглашенному каналу автоматически",
+    "helpAutoJoin": "присоединиться к приглашенному каналу автоматически, когда установлен флажок"
 }
