--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -8,5 +8,7 @@
     "room": "Кімната",
     "helpRoom": "ім'я кімнати на сервері матриці",
     "server": "Сервер",
-    "helpServer": "IP або ім’я хоста вашого матричного сервера"
+    "helpServer": "IP або ім’я хоста вашого матричного сервера",
+    "autoJoin": "автоматично приєднатися до запрошеного каналу",
+    "helpAutoJoin": "приєднатися до запрошеного каналу автоматично, коли позначено"
 }
