--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -8,5 +8,7 @@
     "room": "Room",
     "helpRoom": "room name in your matrix server",
     "server": "Server",
-    "helpServer": "IP or hostname of your matrix server"
+    "helpServer": "IP or hostname of your matrix server",
+    "autoJoin": "join invited channel automatically",
+    "helpAutoJoin": "join invited channel automatically when checked"
 }
